Stow: Fix horizontal scrolling issue on Desktop. Closes #1180

--- a/stow/sass/_extra-child-theme.scss
+++ b/stow/sass/_extra-child-theme.scss
@@ -197,6 +197,8 @@ a {
 		.main-menu {
 			background-color: #{map-deep-get($config-global, "color", "secondary", "default")};
 			border-bottom: 2px solid rgba(0,0,0,.15);
+			margin-left: 0;
+			margin-right: 0;
 		}
 		#toggle-menu {
 			border-radius: 0;
