--- a/stow/style-rtl.css
+++ b/stow/style-rtl.css
@@ -3400,6 +3400,8 @@ a {
 #site-navigation.main-navigation .main-menu {
 	background-color: #f25f70;
 	border-bottom: 2px solid rgba(0, 0, 0, 0.15);
+	margin-right: 0;
+	margin-left: 0;
 }
 
 #site-navigation.main-navigation #toggle-menu {
